# drone_control_ros

de_airsense/: CMakeLists.txt  README.MD  package.xml  setup.py
de_airsense/launch/: dji.launch  mission.launch  objective_composer.launch  px4.launch
de_airsense/scripts/: agent_node  mission_dji_node  mission_node  mission_px4_node  objective_composer_node  waspmote_ipfs_node  waspmote_node
de_airsense/src/de_airsense/: agent.py  mission.py  nodes.py  smssend.py
de_airsense/src/de_airsense/nodes/: __init__.py  mission_dji.py  mission_px4.py  waspmote_ipfs.py
de_airsense/src/de_airsense/sensor_data/: data_2018-08-03_14-28-06.txt  data_2018-08-06_12-59-48.txt  data_2018-08-06_13-23-13.txt  data_2018-08-06_13-33-42.txt  data_2018-08-06_13-37-54.txt  (+27 more)
de_airsense/src/sensor_data/: data_2018-07-21_15-52-24.txt  data_2018-07-21_15-55-37.txt  data_2018-07-21_15-56-47.txt  data_2018-07-21_16-00-08.txt  data_2018-07-21_16-02-06.txt  data_2018-07-21_16-02-40.txt  data_2018-07-21_16-05-45.txt  data_2018-07-21_16-06-45.txt  data_2018-07-21_16-07-20.txt  data_2018-07-21_16-11-02.txt  data_2018-07-21_16-26-24.txt  data_2018-07-21_16-27-20.txt  data_2018-07-21_16-36-07.txt  data_2018-07-21_17-06-25.txt  data_2018-07-21_17-48-49.txt  data_2018-07-22_13-07-03.txt  data_2018-07-22_13-11-04.txt  data_2018-07-22_13-13-19.txt  data_2018-07-22_13-13-43.txt  data_2018-07-22_13-14-04.txt  data_2018-07-22_13-15-39.txt  data_2018-07-26_12-29-08.txt  data_2018-07-26_17-31-44.txt  data_2018-07-30_19-18-33.txt  data_2018-07-30_19-58-32.txt  data_2018-07-30_20-16-28.txt
de_msgs/: README.md  (+2 more)
(+3 files in other folders)
